<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright(c) 2011 Shilpi Agarwal,Hema Kumar

TravelPlanner is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.

Author: Shilpi Agarwal,Hema Kumar
feedback: agarwal.shilpi.84@gmail.com,hemasid@gmail.com
-->

<ScrollView
    android:id="@+id/widget54"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/background"
android:padding="10px"
>
<TableRow>
<TextView
android:id="@+id/travelName"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:width ="120px"
android:text="@string/travelName"/>
<EditText
android:id="@+id/travelNameEntry"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:width ="200px"
android:background="@android:drawable/editbox_background"/>

</TableRow> 
<TableRow> 
<TextView
android:id="@+id/travelMode"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/travelMode"/>
<Spinner 
        android:id="@+id/travelModeSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/travel_mode"
    />
</TableRow> 
<TableRow> 
<TextView
android:id="@+id/travelType"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/travelType"/>
<Spinner 
        android:id="@+id/travelTypeSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/travel_type"
    />

</TableRow> 
<TableRow> 
<Button android:id="@+id/pickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Travel Date"/> 

<TextView android:id="@+id/dateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>
    
</TableRow> 
<TableRow> 
<TextView
android:id="@+id/travelTime"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/travelTime"/>
<Spinner 
        android:id="@+id/travelTimeSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/travel_time"
    />
</TableRow> 
<TableRow> 
<TextView
android:id="@+id/travelFrom"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/travelFrom"/>
<Spinner
android:id="@+id/travelFromSpinner"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:drawSelectorOnTop="true"
android:prompt="@string/travel_From"
 />

</TableRow> 
<TableRow> 
<TextView
android:id="@+id/travelTo"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/travelTo"/>
<Spinner
android:id="@+id/travelToSpinner"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:drawSelectorOnTop="true"
android:prompt="@string/travel_To"

/>
</TableRow> 
<TableRow> 
</TableRow> 
<TableRow> 
<Button
android:id="@+id/addTravelPlanButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/AddTravelPlanButton" />
<Button
android:id="@+id/cancelTravelPlanButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/CancelTravelPlanButton" />
</TableRow> 
</TableLayout>
</ScrollView>
